--- a/zainab-portfolio/src/index.css
+++ b/zainab-portfolio/src/index.css
@@ -1,8 +1,5 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
-
-
-
